# LeapEngineGit

./: CMakeLists.txt  README.md
contrib/LeapSDK/leapc_cffi/: _leapc_cffi.cp38-win_amd64.pyd
contrib/LeapSDK/leapc_cffi/Release/: _leapc_cffi.cp38-win_amd64.exp  _leapc_cffi.cp38-win_amd64.lib
contrib/LeapSDK/lib/x64/cmake/: LeapCTargets-relwithdebinfo.cmake  LeapCTargets.cmake
resources/models/hand/: ring.mtl
resources/models/switch/: SwitchA.mtl  SwitchB.mtl  light.mtl
resources/textures/: Thumbs.db
src/demo/: main.cpp
src/leap/: ExampleConnection.h  LeapSample.c
src/myengine/: BoxModel.cpp  BoxModel.h  BoxRenderer.cpp  BoxRenderer.h  Camera.cpp  Camera.h  Collision.cpp  Collision.h  CollisionManager.cpp  CollisionManager.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  HandData.cpp  HandData.h  HandTransform.cpp  HandTransform.h  Keyboard.cpp  Keyboard.h  LeapHand.cpp  LeapHand.h  LeapInitialize.cpp  LeapInitialize.h  LightModel.cpp  LightModel.h  LightRenderer.cpp  LightRenderer.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  Sound.cpp  Sound.h  (+11 more)
src/rend/: Animation.cpp  Animation.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelShader.cpp  ModelShader.h  rendmath.cpp
src/sys/: autoptr.h  criticalpin.h  exception.h  file.h  linkedlist.h  lock.h  ptr.h  string.h  vector.h  weakptr.h  zero.h
